update readme and package scripts

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "cypress": "cypress open",
-    "cypress:component": "cypress open --component"
+    "cypress:component": "cypress run --component"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.4",
